k8s/okra-home-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: okra-home-svc
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    name: okra-home
