k8s/okra-code-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ing
spec:
  rules:
  - host: home.okracode.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okra-home-svc
            port:
              number: 80
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: okra-code-svc
            port:
              number: 80
